--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "vaul": "^0.9.9",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "@prisma/client": "^5.13.0",
+    "prisma": "^5.13.0"
   }
 }
